--- a/Hello-World/app/src/main/res/layout/activity_main.xml
+++ b/Hello-World/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         android:layout_width="75dp"
         android:layout_height="32dp"
         android:text="Enters: 0 "
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="#070303"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,5 +48,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.977" />
+
+    <TextView
+        android:id="@+id/exits"
+        android:layout_width="75dp"
+        android:layout_height="32dp"
+        android:text="Exits: 0"
+        android:textAlignment="textStart"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.047"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.931" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
