--- a/Traffic-Light/app/src/main/res/layout/activity_main.xml
+++ b/Traffic-Light/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         android:id="@+id/button"
         android:layout_width="145dp"
         android:layout_height="61dp"
+        android:onClick="onClickButton"
         android:text="START"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
